--- a/react-front-to-back/contact-keeper/.gitignore
+++ b/react-front-to-back/contact-keeper/.gitignore
@@ -1,2 +1,13 @@
-node_modules
+node_modules/
 config/**.json
+
+/client/build
+.DS_STORE
+/client/.env.local
+/client/.env.development.local
+/client/.env.test.local
+/client/.env.production.local
+
+npm-debug.log*
+yard-debug.log*
+yarn-error.log*
